Added bonus exercises

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
                     <div class="column">
                         <p class="size-3_color-primary_weight-normal_align-left">Your name:</p>
-                        <input  type="text" name="name" class="textbox"><br><br>
+                        <input  type="text" id="name" class="textbox"><br><br>
                         <p class="size-3_color-primary_weight-normal_align-left">Country:</p>
-                        <select name="Country" class="dropdown_menu">                                                                                  
+                        <select id="country" class="dropdown_menu">                                                                                  
                             <option value="Austria" selected>Austria</option>
                             <option value="Hungary">Hungary</option>                              
                             <option value="Greece">Greece</option>
@@ -58,9 +58,9 @@
 
                     <div class="column">
                         <p class="size-3_color-primary_weight-normal_align-left">Age:</p>
-                        <input type= "text" name="age" class="textbox"><br><br>
+                        <input type= "text" id="age" class="textbox"><br><br>
                         <p class="size-3_color-primary_weight-normal_align-left">Horsepower of your car:</p>
-                        <input type= "text" name="power" class="textbox"><br><br>
+                        <input type= "text" id="power" class="textbox"><br><br>
                     </div>
                     
                 </div>
@@ -119,6 +119,8 @@
     </footer>
 
 </div>
+   
+    <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 
